Make banner's z-index higher, to prevent overlap

--- a/labsystem/scss/components/_lab-alerts.scss
+++ b/labsystem/scss/components/_lab-alerts.scss
@@ -86,7 +86,7 @@ $alerts-line-height: 20px;
   position: -webkit-sticky;
 
   top: 0;
-  z-index: 1;
+  z-index: 2;
 
   &--info {
     @extend .lab-banner;
